# jellyfin-remote

./: .gitignore  README.md  jellyfin_wholehome_audio_plan.md
jf-audio-renderer/: README.md  config.example.yaml  pyproject.toml  session.secret
jf-audio-renderer/docs/: README.md  admin-and-security.md  api.md  configuration.md  dependencies.md  installation.md  troubleshooting.md
jf-audio-renderer/scripts/: lxc-setup-debian.sh
jf-audio-renderer/scripts/systemd/: jf-audio-renderer.service
jf-audio-renderer/src/jf_audio_renderer/: admin_portal.py  api.py  config.py  jellyfin_client.py  main.py  models.py  mpv_controller.py  queue_manager.py  secure_store.py  state.py
jf-audio-renderer/src/jf_audio_renderer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jf-music-controller/: README.md  config.example.yaml  pyproject.toml  session.secret
jf-music-controller/docs/: README.md  admin-and-security.md  api.md  configuration.md  dependencies.md  frontend.md  installation.md  troubleshooting.md
jf-music-controller/python_src/jf_music_controller/: admin_portal.py  app.py  config.py  jellyfin.py  main.py  secure_store.py  self_restart.py
jf-music-controller/python_src/jf_music_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
jf-music-controller/scripts/: lxc-setup-debian.sh
jf-music-controller/scripts/systemd/: jf-music-controller.service
jf-music-controller/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
jf-music-controller/web/src/: App.tsx  api.ts  index.css
jf-music-controller/web/src/pages/: Album.tsx  Artist.tsx  Home.tsx  Library.tsx  NowPlaying.tsx  Search.tsx  Settings.tsx
(+18 files in other folders)
