[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jf-audio-renderer"
version = "0.1.0"
description = "Headless Jellyfin music renderer (mpv + FastAPI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.0",
  "cryptography>=42.0.0",
  "bcrypt>=4.1.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "eval-type-backport>=0.2.0",
]

[project.scripts]
jf-audio-renderer = "jf_audio_renderer.main:cli_main"

[tool.setuptools.package-data]
"jf_audio_renderer" = ["templates/**/*.html"]

[tool.setuptools.packages.find]
where = ["src"]

