[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jf-music-controller"
version = "0.1.0"
description = "Finamp-like Jellyfin music web controller + BFF"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.0",
  "cryptography>=42.0.0",
  "bcrypt>=4.1.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "eval-type-backport>=0.2.0",
]

[project.scripts]
jf-music-controller = "jf_music_controller.main:cli_main"

[tool.setuptools.package-data]
"jf_music_controller" = ["templates/**/*.html"]

[tool.setuptools.packages.find]
where = ["python_src"]
